5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4162/executions/1724_2520.log
== TEST (2019-05-14 21:49:41) 
-- CODE:
n= int(input("digite um numero N para determinar a quantidade de termos: "))
from math import*
m=1
p=sqrt(6*m,2)
print(p)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    p=sqrt(6*m,2)
TypeError: sqrt() takes exactly one argument (2 given)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 21:50:32) 
-- CODE:
n= int(input("digite um numero N para determinar a quantidade de termos: "))
from math import*
m=1
p=sqrt(6*m)
print(p)

-- OUTPUT:
2.449489742783178
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 21:58:47) 
-- CODE:
n= int(input("digite um numero N para determinar a quantidade de termos: "))
m=0
d=1
s=0
while m<n
	s=1/d**2+s
	m=m+1
	d=d+1
from math import*
r=sqrt(6*s)
print(r)
-- ERROR:
File "XXXX", line 5
    while m<n
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 21:58:53) 
-- CODE:
n= int(input("digite um numero N para determinar a quantidade de termos: "))
m=0
d=1
s=0
while m<n:
	s=1/d**2+s
	m=m+1
	d=d+1
from math import*
r=sqrt(6*s)
print(r)
-- OUTPUT:
3.139684123138722
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 21:59:12) 
-- CODE:
n= int(input("digite um numero N para determinar a quantidade de termos: "))
m=0
d=1
s=0
while m<n:
	s=1/d**2+s
	m=m+1
	d=d+1
from math import*
r=sqrt(6*s)
print(round(r,6))
-- OUTPUT:
3.139684
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 21:59:20) 
-- CODE:
n= int(input("digite um numero N para determinar a quantidade de termos: "))
m=0
d=1
s=0
while m<n:
	s=1/d**2+s
	m=m+1
	d=d+1
from math import*
r=sqrt(6*s)
print(round(r,6))
-- OUTPUT:
3.139684
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 21:59:27) 
-- CODE:
n= int(input("digite um numero N para determinar a quantidade de termos: "))
m=0
d=1
s=0
while m<n:
	s=1/d**2+s
	m=m+1
	d=d+1
from math import*
r=sqrt(6*s)
print(round(r,6))
-- OUTPUT:
3.139684
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 21:59:33) 
-- CODE:
n= int(input("digite um numero N para determinar a quantidade de termos: "))
m=0
d=1
s=0
while m<n:
	s=1/d**2+s
	m=m+1
	d=d+1
from math import*
r=sqrt(6*s)
print(round(r,6))
-- OUTPUT:
3.139684
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 21:59:41) 
-- CODE:
n= int(input("digite um numero N para determinar a quantidade de termos: "))
m=0
d=1
s=0
while m<n:
	s=1/d**2+s
	m=m+1
	d=d+1
from math import*
r=sqrt(6*s)
print(round(r,6))
-- EXECUTION TIME:
0.206055
-- TEST CASE 1:
---- input:
500
---- correct output:
3.139684
---- user output:
3.139684
-- TEST CASE 2:
---- input:
159863
---- correct output:
3.141587
---- user output:
3.141587
-- TEST CASE 3:
---- input:
100
---- correct output:
3.132077
---- user output:
3.132077
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
